example_errors2.txt
cargo : warning: value assigned to `resolved_protocol` is never read
所在位置 行:1 字符: 1
+ cargo check --examples --features response_parser 2>&1 | Out-File -En ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (warning: value ...` is never read:Stri 
   ng) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
   --> src\client\builder.rs:247:17
    |
247 |         let mut resolved_protocol = String::new();
    |                 ^^^^^^^^^^^^^^^^^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` on by default

warning: value assigned to `resolved_protocol` is never read
   --> src\client\builder.rs:415:21
    |
415 |             let mut resolved_protocol = String::new();
    |                     ^^^^^^^^^^^^^^^^^
    |
    = help: maybe it is overwritten before being read?

warning: `ai-lib` (lib) generated 2 warnings
    Checking ai-lib v0.4.0 (D:\rustapp\ai-lib)
warning: unused import: `MarkdownSectionParser`
 --> examples\response_parsing.rs:7:82
  |
7 |     extract_code_blocks, extract_json_from_text, AutoParser, 
JsonResponseParser, MarkdownSectionParser,
  |                                                                                 
 ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `Role`
  --> examples\response_parsing.rs:10:66
   |
10 | use ai_lib::{AiClient, ChatCompletionRequest, Message, Provider, Role};
   |                                                                  ^^^^

warning: unused variable: `client`
  --> examples\quickstart.rs:16:9
   |
16 |     let client = AiClientBuilder::new(Provider::Groq)
   |         ^^^^^^ help: if this is intentional, prefix it with an underscore: 
`_client`
   |
   = note: `#[warn(unused_variables)]` on by default

error[E0004]: non-exhaustive patterns: `ParsedResponse::JsonLines(_)` not covered
   --> examples\response_parsing.rs:46:11
    |
46  |     match auto.parse(&content).await? {
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^ pattern `ParsedResponse::JsonLines(_)` 
not covered
    |
note: `ParsedResponse` defined here
   --> D:\rustapp\ai-lib\src\response_parser\mod.rs:197:1
    |
197 | pub enum ParsedResponse {
    | ^^^^^^^^^^^^^^^^^^^^^^^
198 |     Json(JsonValue),
199 |     JsonLines(Vec<JsonValue>),
    |     --------- not covered
    = note: the matched value is of type `ParsedResponse`
help: ensure that all possible cases are being handled by adding a match arm with a 
wildcard pattern or an explicit pattern as shown
    |
60  ~         ParsedResponse::Text(_) => println!("\n(plain text)"),
61  ~         ParsedResponse::JsonLines(_) => todo!(),
    |

warning: `ai-lib` (example "quickstart") generated 1 warning
For more information about this error, try `rustc --explain E0004`.
warning: `ai-lib` (example "response_parsing") generated 2 warnings
error: could not compile `ai-lib` (example "response_parsing") due to 1 previous 
error; 2 warnings emitted
warning: build failed, waiting for other jobs to finish...
warning: unused import: `std::time::Duration`
 --> examples\model_management.rs:6:5
  |
6 | use std::time::Duration;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `ai_lib::types::common::Content`
 --> examples\mistral_features.rs:1:5
  |
1 | use ai_lib::types::common::Content;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused imports: `AiClient`, `ChatCompletionRequest`, `Message`, 
`Provider`, and `Role`
 --> examples\mistral_features.rs:2:14
  |
2 | use ai_lib::{AiClient, ChatCompletionRequest, Message, Provider, Role};
  |              ^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^  ^^^^^^^^  ^^^^

warning: `ai-lib` (example "model_management") generated 1 warning (run `cargo fix 
--example "model_management"` to apply 1 suggestion)
warning: unused variable: `transport`
  --> examples\custom_transport_config.rs:13:9
   |
13 |     let transport = HttpTransport::new_with_config(cfg)?;
   |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: 
`_transport`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: `ai-lib` (example "mistral_features") generated 2 warnings (run `cargo fix 
--example "mistral_features"` to apply 2 suggestions)
warning: `ai-lib` (example "custom_transport_config") generated 1 warning
